# ai-token-saver

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANUALE.md  README.md  install.sh  rtk-audit.md  rtk.rb  rtk_complete_plan_june_2026.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.windsurf/rules/: rtk-profile.md
claudedocs/: RTK-AUDIT-2026-07-01.md
docs/: COMMUNITY.md  CONTRIBUTING.md  IMPROVEMENT_PLAN_9PLUS.md  PLAN_NOW.md  QUICKSTART.md  RELEASE.md  ROADMAP.md  USER.md  WIKI_HOME.md  WIKI_SETUP.md  book.toml
docs/marketing/: blog_post.md  case_study_template.md  index.html
docs/src/: README.md  SUMMARY.md  architecture.md  benchmarks.md  cli.md  configuration.md  installation.md  limitations.md  plugins.md  pricing.md  use-cases.md
fixtures/cargo_build/: expected.txt  input.txt
fixtures/cargo_test/: expected.txt  input.txt
fixtures/docker_build/: expected.txt  input.txt
fixtures/git_diff/: expected.txt  input.txt
fixtures/git_status/: expected.txt  input.txt
fixtures/ls/: expected.txt  input.txt
fixtures/npm_install/: expected.txt  input.txt
fixtures/pytest/: expected.txt
rtk/: AGENTS.md  Cargo.toml  bench.json  build.sh  rtk-audit.md
rtk-p0-delivery/: Cargo.toml  agents.rs  implementation_plan.md  integration_test.rs  main.rs  model_pricing.json  pricing.rs  session.rs  task.md  think.rs  tracking.rs  walkthrough.md
rtk/.github/: copilot-instructions.md
rtk/rtk-cli/: Cargo.toml
rtk/rtk-cli/src/: agents.rs  artifact.rs  benchmark.rs  cli.rs  dashboard.rs  dispatch.rs  distiller.rs  doctor.rs  dotnet.rs  filter_pipeline.rs  fuzz_tests.rs  index_cli.rs  main.rs  plugins.rs  rewrite.rs  setup.rs  sync_rules.rs
rtk/rtk-cli/tests/: fixtures.rs  integration_test.rs
rtk/rtk-db/: Cargo.toml
rtk/rtk-db/src/: artifact.rs  config.rs  dlp.rs  lib.rs  pricing.rs  session.rs  status.rs  think.rs  tracking.rs
rtk/rtk-filters/: Cargo.toml
rtk/rtk-filters/src/: cargo_build.rs  cargo_test.rs  docker_filter.rs  docker_ps_filter.rs  gh_filter.rs  git_branch.rs  git_diff.rs  git_show.rs  git_status.rs  go_test.rs  gradle.rs  lib.rs  ls_filter.rs  mypy_filter.rs  npm_filter.rs  pytest_filter.rs
rtk/rtk-filters/src/snapshots/: rtk_context_filters__cargo_build__tests__snapshot_cargo_build_clean.snap  rtk_context_filters__cargo_test__tests__snapshot_cargo_test_passing.snap  (+1 more)
rtk/rtk-index/: Cargo.toml
rtk/rtk-index/src/: db.rs  embeddings.rs  graph.rs  lib.rs  parser.rs
rtk/rtk-mcp/: Cargo.toml
rtk/rtk-mcp/src/: lib.rs
rtk/rtk-memory/: Cargo.toml
rtk/rtk-memory/src/: config.rs  dlp.rs  lib.rs  status.rs  think.rs  tracking.rs
rtk/rtk-pack/: Cargo.toml
rtk/rtk-pack/src/: lib.rs  pack.rs  skeleton.rs
rtk/src/: cargo_build.rs  cargo_test.rs  config.rs  distiller.rs  dlp.rs  docker_filter.rs  dotnet.rs  git_diff.rs  git_log.rs  git_status.rs  go_test.rs  gradle.rs  ls_filter.rs  main.rs  pack.rs  pytest_filter.rs  rewrite.rs  setup.rs  skeleton.rs  status.rs  sync_rules.rs  think.rs  tracking.rs
rtk/tests/: integration_test.rs
rtk/tests/common/: mod.rs
rtk/tests/fixtures/: cargo_build_clean.txt  cargo_check_warnings.txt  cargo_test_passing.txt  git_diff_raw.txt  git_log_raw.txt  git_status_dirty.txt
rules/: backend-auto.mdc  frontend-auto.mdc  gitnexus.mdc  graphify.mdc  lazy-dev.mdc  token-efficiency.mdc  trading-auto.mdc  workspace-scope.mdc
scripts/: benchmark.py  benchmark_gate.sh  e2e_smoke.sh  homebrew_smoke.sh  publish-crates.sh  release_gen.py  update_homebrew_sha256.sh
skills/rtk-efficiency/: SKILL.md
(+4 files in other folders)
