[package]
name = "rtk-cli"
version = "0.1.0"
edition = "2021"
description = "RTK — main entrypoint binary and command router CLI"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rtk-filters = { path = "../rtk-filters" }
rtk-db = { path = "../rtk-db" }
rtk-pack = { path = "../rtk-pack" }

[dev-dependencies]
insta = "1"
proptest = "1"
