[package]
name = "rtk-cli"
version = "2.0.0"
edition = "2021"
description = "RTK — main entrypoint binary and command router CLI"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rtk-filters = { path = "../rtk-filters" }
rtk-db = { path = "../rtk-db" }
rtk-pack = { path = "../rtk-pack" }
rtk-index = { path = "../rtk-index" }
rtk-mcp = { path = "../rtk-mcp" }



[dev-dependencies]
insta = "1"
proptest = "1"
