[package]
name = "rtk-mcp"
version = "2.0.0"
edition = "2021"
description = "RTK — Model Context Protocol (MCP) server for local context tools"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtk-db = { path = "../rtk-db" }
rtk-index = { path = "../rtk-index" }
rtk-pack = { path = "../rtk-pack" }
dirs = "5.0"
