[package]
name = "rtk-memory"
version = "0.1.0"
edition = "2021"
description = "RTK — SQLite FTS5 context memory database, DLP redaction, and config"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", optional = true }
