[package]
name = "rtk-pack"
version = "0.1.0"
edition = "2021"
description = "RTK — code layout packing and AST skeleton parser modules"

[dependencies]
anyhow = "1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
rtk-memory = { path = "../rtk-memory" }
